# paper-weight

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_INSTRUCTIONS.md  README.md
.claude/: settings.json
.github/: branch-protection-master.json  dependabot.yml  labeler.yml  pull_request_template.md
device-smoke/: README.md  index.html
docs/: CLAUDE_PROJECT_TEMPLATE.md
host/: .gitignore  mix.exs
kanban/: board.md
resolutions/: README.md  buttons-do-nothing-input-bridge-failed.md  deploy-claimed-but-only-gen-1.md  deploy-rollback-from-stray-manual-input-bridge.md  deploy-script-dies-on-failed-service-check.md  fixture-host-dies-with-terminal.md  input-bridge-crash-looping.md  kiosk-stuck-on-stale-error-page.md  nixbuild-aarch64-exec-format-error.md  nixbuild-retries-restart-from-zero.md  usb-gadget-address-expires.md
scripts/: car-thing-reflash-last-good.sh  car-thing-usb-burn-fix.sh  check-gh-auth.ps1  check-gh-auth.sh  device-cdp.py  device-flash.sh  device-kiosk.sh  device-nixos.sh  host-health-check.sh  host-service.sh  paper-weight-host.service.template  push-cards.ps1  run-device-fixture.sh  set-card-status.ps1  set-card-status.sh  try-kick-device.sh  verify-kiosk-pointer.sh  verify-w5-weather.sh
src/input-bridge/: Cargo.toml  README.md  input-bridge.example.conf
src/input-bridge/scripts/: check.sh
src/input-bridge/src/: bus.rs  config.rs  device.rs  event.rs  lib.rs  linux.rs  main.rs  processor.rs  reducer.rs  sse.rs
src/input-bridge/systemd/: input-bridge.service
src/input-bridge/tests/: config.rs  fake_evdev.rs  sse_transport.rs
(+280 files in other folders)
