[package]
name = "paper-weight-input-bridge"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Car Thing evdev to versioned local input-event bridge"

[lib]
name = "paper_weight_input_bridge"
path = "src/lib.rs"

[[bin]]
name = "input_bridge"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

